# Craft-Studio

./: .gitignore  CMakeLists.txt  README.md
cmake/: global_build.cmake
docs/: changelog
docs/vtk-learn/: compile.md  vtk_01.md
documents/: merged_output.stl  part.stl
note-learn/arch/: 01-dd.md
note-learn/cv/: 00_introduction.md  01_morphology.md  02_contours.md
note-learn/vtk/: 01-contents.md  02-build.md  03-basic_example.md  04-observer&trasform.md  05- multiple-renderers.md  06-win.md  07-more-objects.md  09-load_stl&transform.md
note-learn/vtk_exercise/: 001_slice_visual.md
resources/: platform.glb
src/app/: CMakeLists.txt
src/app/CraftsStudio/: CMakeLists.txt  action_factory.cc  action_factory.h  actionfactory.cc  actionfactory.h  app.qrc  main.cc
src/app/CraftsStudio/actions/: action_statck.cc  action_statck.h
src/app/CraftsStudio/engine/: rs_interactor_style.cc  rs_interactor_style.h  rs_interactor_switch.cc  rs_interactor_switch.h  rs_interactor_trackball_actor.cc  rs_interactor_trackball_actor.h  rs_interactor_trackball_camera.cc  rs_interactor_trackball_camera.h  rs_scene_manager.cc  rs_scene_manager.h  rs_scene_object.cc  rs_scene_object.h  rs_transform_gizmo.cc  rs_transform_gizmo.h
src/app/CraftsStudio/resources/model/: Model_shizi_50um.sl
src/app/CraftsStudio/ui/: mainwindow.cc  mainwindow.h  menu_manager.cc  menu_manager.h  model_manager.cc  model_manager.h  model_viewer.cc  model_viewer.h  project_tree.cc  project_tree.h  slice_panel.cc  slice_panel.h  transform_panel.cc  transform_panel.h  tree_model.cc  tree_model.h
src/libs/: CMakeLists.txt
tests/lib/: update.sh
